--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Mohamed Hassouna's Portfolio">
     <meta name="keywords" content="portfolio, web development, full-stack developer, github , gitlab">
     <meta name="author" content="Mohamed Hassouna">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Moahmed's Portfolio</title>
 </head>
