--- a/index.html
+++ b/index.html
@@ -6,48 +6,54 @@
     <meta name="description" content="Mohamed Hassouna's Portfolio">
     <meta name="keywords" content="portfolio, web development, full-stack developer, github , gitlab">
     <meta name="author" content="Mohamed Hassouna">
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css">
     <title>Moahmed's Portfolio</title>
 </head>
 <body>
     <header id="home">
         <a href="#home" class="logo">Mou7</a>
         <nav class="navbar">
-            <a href="#home">Home</a>
+            <a href="#intro">Home</a>
             <a href="#about">About</a>
             <a href="#skills">Skills</a>
             <a href="#contact">Contact</a>
         </nav>
     </header>
 
-    <aside>
-        <div class="content-text">
+    <aside id="intro">
+        <div class="content-text" >
             <h1>Hi there!👋🏼I'm Mohamed hassouna</h1>
-            <h3>future of full-Stack developer</h3>
+            <h3>Full-Stack developer</h3>
             <br><br>
             <button>Download CV</button>
         </div>
-        <div class="social">
-            <a href="https://www.facebook.com/profile.php?id=100023936994276" target="_blank">
+        <div class="social" >
+            <a href="https://www.facebook.com/profile.php?id=100023936994276" target="blank">
                 <i class="fa-brands fa-facebook"></i>
             </a>
-            <a href="https://instagram.com/mohamed._.hassouna?igshid=YzAwZjE1ZTI0Zg==" target="_blank">
+            <a href="https://instagram.com/mohamed._.hassouna?igshid=YzAwZjE1ZTI0Zg==" target="blank">
                 <i class="fa-brands fa-instagram"></i>
             </a>
-            <a href="https://www.linkedin.com/in/mohamed-hassouna-7063142a0/" target="_blank">
+            <a href="https://www.linkedin.com/in/mohamed-hassouna-7063142a0/" target="blank">
                     <i class="fa-brands fa-linkedin"></i>
             </a>
-            <a href="https://github.com/mohamedhassouna242004"target="_blank">
+            <a href="https://github.com/mohamedhassouna242004"target="blank">
                 <i class="fa-brands fa-github"></i>
             </a>
             <br><br>
             
         </div> 
     </aside>
-    <main>
-        <img src="mou7.jpg" alt="Mohamed Hassouna">
+
+
+    <main id="about" class="about-container">
+        <img src="mou7.jpg" alt="Mohamed Hassouna" class="about-image">
+        <p class="about-paragraph">I am Mohamed Hassouna, an enthusiastic and dedicated IT student with a strong passion for web development and programming. Currently pursuing my studies in the Development of Information Systems at ISET Tozeur, I have honed my skills in full-stack development, specializing in technologies such as HTML, CSS, JavaScript, Angular, Symfony, Java, Python, PHP, and MySQL. My goal is to leverage my knowledge and creativity to build impactful web applications that provide seamless user experiences. I am always eager to learn new technologies and collaborate on innovative projects that challenge me and allow me to grow as a developer.</p>
+        
     </main>
+
+
     <section id="skills" >
         <h1 class="sk"><i class="fas fa-cogs"></i>
             Skills & Abilities </h1>
@@ -69,7 +75,7 @@
         <ul class="m">
             <li><i class="fas fa-envelope email-icon "></i>mohamed.hassouna.2004.24@gmail.com</li>
             <br>
-            <li><i class="fas fa-phone phone-icon"></i>+216 52059808</li>
+            <li><i class="fas fa-phone phone-icon"></i>+216 52 059 808</li>
             <br>
             <li><i class="fas fa-map-marker-alt map-icon"></i>Bembla, Monastir, tunisia</li>
             <br>
