--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a href="https://www.linkedin.com/in/mohamed-hassouna-7063142a0/" target="blank">
                     <i class="fa-brands fa-linkedin"></i>
             </a>
-            <a href="https://github.com/mohamedhassouna242004"target="blank">
+            <a href="https://github.com/hassounamohamed"target="blank">
                 <i class="fa-brands fa-github"></i>
             </a>
             <br><br>
