--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Mohamed Hassouna">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="mo.jpg">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -37,7 +38,14 @@
                 <div class="col-md-6">
                     <h1>Hi there! 👋🏼 I'm Mohamed Hassouna</h1>
                     <h3>Full-Stack Developer</h3>
+                    
+                <button class="btn btn-secondary mt-3" onclick="window.open('CV.pdf')">View CV</button>
+
+
+                <a href="CV.pdf" download>
                     <button class="btn btn-warning mt-3">Download CV</button>
+                </a>
+
                 </div>
                 <div class="col-md-6 text-center">
                     <div class="social">
